Fix alignment with [quote] tags and text

--- a/assets/components/discuss/themes/modx/css/index.css
+++ b/assets/components/discuss/themes/modx/css/index.css
@@ -359,7 +359,6 @@ div.dis-post-footer {
 
 .dis-quote {
 	display: block;
-	float: left;
 	margin: 0 0 10px;
 	padding: 10px;
 	width: 95%;
